	NX-1341 (Scheduled tasks enabled/disabled indicator)
	NX-1342 (Increase text length limit in SMS sender)
	NX-1343 (Server crash on re-enabling temporary disabled user)
	NX-1344 (Search Bar for Agent Tunnel Manager)
	NX-1348 (Continuous warnings in server log: seed object 0 cannot be found)
	NX-1361 (Data type of transformation script's input value can be incorrect)


*
* 2.1.2
*

- Summary tables for table DCIs
- Multi-valued columns in summary tables
- Threshold violation events have current DCI value as parameter 8 (named as "dciValue")
- New agent configuration parameter TunnelKeepaliveInterval
- Optimizations in database access layer
- Improved database check procedure
- Management console:
	- Option to set root object for "Geo Map" dashboard element
	- Filter in geo map view
	- "Duplicate" button in DCI threshold editor
	- Option to show legend for performance tab graphs with single DCI
	- Fixed file upload errors in web UI
	- Option to show "Top N items" in dashboad summary table using given sorting columns
- Fixed issues: NX-1147, NX-1265, NX-1270, NX-1276, NX-1282, NX-1290, NX-1296, NX-1300, NX-1309, NX-1313, NX-1314, NX-1315, NX-1320, NX-1324, NX-1325, NX-1331, NX-1333, NX-1335


*
* 2.1.1
*

- XEN monitoring subagent
- Fixed issues with agent tunnels
- Fixed bug in STP-based topology discovery
- Fixed unrestricted node poller queue growth when discovery from SNMP traps or syslog is on
- Server's database password can be supplied by external tool
- Fixed OpenBSD compatibility issues
- Correct handling of "dormant" and "not present" interface operational states
- Syslog messages received on loopback bound to receiving node (local management node or syslog proxy node)
- Fixed mail sender address encoding
- Fixed bug with lost agent connectivity after tunnel reconnect
- Zone ID now referenced as Zone UIN (unique identification number) to avoid confusion with zone object ID
- Fixed bug with not generated xx_UNREACHABLE events after server restart
- NXSL: