@@ -28,6 +28,7 @@
 	NX-1344 (Search Bar for Agent Tunnel Manager)
 	NX-1348 (Continuous warnings in server log: seed object 0 cannot be found)
 	NX-1361 (Data type of transformation script's input value can be incorrect)
+	NX-1436 (Write hostname to agent log on startup)
 
 
 *
